# claude-template

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  caption.py  claude_setup.py  main.py  nd.py  pdfcheck.py  pyproject.toml  setup_claude.py  setup_test.py  setup_windows.ps1  startup.py  sync_skills.py
.agents/skills/: .generated-from-claude-skills
.agents/skills/caption/references/: command_contracts.md
.agents/skills/compare/: SKILL.md
.agents/skills/compare/scripts/: run_compare.py  run_compare.sh
.agents/skills/journal/: SKILL.md
.agents/skills/redline/scripts/: run_redline.py
.agents/skills/sigcheck/scripts/: sig_check.py
.claude/: settings.json
.claude/hooks/: journal_inject.py
.claude/skills/caption/: SKILL.md  metadata.yml
.claude/skills/caption/references/: command_contracts.md  error_playbook.md
.claude/skills/caption/scripts/: run_caption.py  run_caption.sh
.claude/skills/compare/: SKILL.md
.claude/skills/docx/: SKILL.md
.claude/skills/journal/: SKILL.md
.claude/skills/redline/: SKILL.md  metadata.yml
.claude/skills/redline/scripts/: run_redline.py  run_redline.sh
.claude/skills/sigcheck/: SKILL.md
.claude/skills/sigcheck/scripts/: sig_extract.py  sig_table.py
.claude/skills/superdoc-redlines/: README.md  SKILL.md  package-lock.json  superdoc-redline.mjs
.claude/skills/superdoc-redlines/tests_and_others/tests/: cli.test.mjs
.claude/skills/sync/: SKILL.md
.claude/skills/vs/: SKILL.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  STACK.md  TESTING.md
caption-cli/: pyproject.toml
caption-cli/.planning/codebase/: INTEGRATIONS.md  STRUCTURE.md
caption-cli/caption_cli/: cli.py  commands.py  core.py  main.py
caption-cli/tests/: test_caption.py
caption_cli/: __init__.py  cli.py  commands.py
netdocs/: __init__.py  __main__.py  app.py  config.py  env.py
netdocs/screens/: __init__.py  files.py
tests/: test_caption.py  test_journal_inject.py
tools/: count_tokens.py  remove_artifacts.py
