[project]
name = "claude-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "markitdown[pdf, docx, pptx, outlook]",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.0",
    "textual>=6.9.0",
    "textual-fspicker>=0.6.0",
    "tiktoken>=0.8.0",
]

[project.scripts]
netdocs = "netdocs.__main__:main"

[dependency-groups]
redline = [
    "adeu @ git+https://github.com/dealfluence/adeu.git@7289c3228795c9bc469628aafcbc4eee96a98dc3",
]

[tool.uv]
package = true
default-groups = ["redline"]

[tool.setuptools.packages.find]
include = ["netdocs*"]
