[project]
name = "claude-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "markitdown[pdf, docx, pptx, outlook]",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymupdf>=1.28.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.0",
    "textual>=6.9.0",
    "textual-fspicker>=0.6.0",
    "tiktoken>=0.8.0",
]

[project.scripts]
netdocs = "netdocs.__main__:main"

[dependency-groups]
redline = [
    # Slim fork of dealfluence/adeu: fastmcp moved to an optional extra,
    # dropping ~20 MCP-server packages the CLI never uses.
    "adeu",
]
compare = [
    "python-redlines[docxodus]>=0.2.1",
]

[tool.uv]
package = true
default-groups = ["redline", "compare"]

[tool.uv.sources]
adeu = { git = "https://github.com/vela-wood/adeu.git", tag = "v1.19.0-slim", subdirectory = "python" }

[tool.setuptools.packages.find]
include = ["netdocs*"]
