[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caption-cli"
version = "0.1.0"
description = "Search-focused Caption CLI."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "meilisearch>=0.40.0",
  "python-dotenv>=1.1.1",
]

[project.scripts]
caption = "caption_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
include = [
  "caption.py",
  "caption_cli/**/*.py",
]
